@@ -1,6 +1,7 @@
 2006-03-13  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* doc/tmpl/hildon-wizard-dialog.sgml: Fix unmatching tags
+	* doc/Makefile.am: Ignore right files with IGNORE_HFILES
 
 2006-03-13  Tommi Komulainen  <tommi.komulainen@nokia.com>
 	
